Fix the bug that focus a sticky input box may incorrectly scroll the page

Bug: 746590
Change-Id: I0812b2d3380ef7c8f64fed56c6371a65912013b0
Reviewed-on: https://chromium-review.googlesource.com/577961
Commit-Queue: Yi Gu <yigu@chromium.org>
Reviewed-by: Kent Tamura <tkent@chromium.org>
Reviewed-by: Robert Flack <flackr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#489914}
Former-commit-id: f680708dab9990e1229d7e4ccb664f994cf72b1a